@@ -2,6 +2,7 @@
         - Improve handling of unknown header types
         - Check for valid sigles to avoid broken directories
         - Introduce exclusivity for inline tokens handling.
+        - Use single dash for STDIN.
 
 2.2.0 2021-08-26 Release
         - Remove unnecessary branch in recursive call
